fix image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -804,9 +804,22 @@ body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
   border-radius: 50%;
 }
 
+@media screen and (max-width: 1200px) {
+  .fh5co-feature .fh5co-icon {
+    width: 120px;
+    height: 120px;
+  }
+}
+
 .fh5co-feature .fh5co-icon img {
   width: 180px;
-  height: 180px;
+  height: auto
+}
+
+@media screen and (max-width: 1200px) {
+  .fh5co-feature .fh5co-icon img {
+    width: 120px;
+  }
 }
 
 .fh5co-feature .fh5co-icon i {
@@ -818,7 +831,8 @@ body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
 }
 @media screen and (max-width: 1200px) {
   .fh5co-feature .fh5co-icon i {
-    font-size: 60px;
+    font-size: 30px;
+    height: 120px;
   }
 }
 .fh5co-feature .fh5co-text {
